tui works in browser

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,6 +2,7 @@
 
 @main("HTWG Sudoku") {
 
-    <h1>About Sudoku</h1>
+    <h1>About Mill</h1>
+    <h2>developed by: Anton Hummel &amp; Matthias Asche</h2>
 
 }
