added link & picture

--- a/app/views/rules.scala.html
+++ b/app/views/rules.scala.html
@@ -24,11 +24,14 @@
         <p>When a player has only 3 stones left he can move a stone to any free point on the board</p>
 
         <h3>Case of mill</h3>
-        <p>If 3 stones of one colour form a line the player can remove a stone of his opponent which isnt in a mill (If all the stones are in a mill this rule doesnt apply) <br>
+        <p>If 3 stones of one colour form a line the player can remove a stone of his opponent which isn't in a mill (If all the stones are in a mill this rule doesnt apply) <br>
             The stones remain outside the board and cant be placed back on it
         </p>
         <h3>Game ending</h3>
         <p>The game ends if one player has only 2 Stones left. The other player wins the game</p>
+        <p>Let's play a <a href="/start"> Game</a></p>
+
+        <img src="@routes.Assets.versioned("images/Board.png")"/>
 
 
     </body>
