--- a/app/views/mill.scala.html
+++ b/app/views/mill.scala.html
@@ -9,16 +9,16 @@
     <h1>Welcome to Nine Mens Morris!</h1>
     <div class="gamecontainer">
         <div class="game">
-            @{ Html.apply(board) }
+            <!--@{ Html.apply(board) }-->
             <br>
             @for(index <- 0 until size) {
                     <span class="field index@index">
                         @list(index)
-                        @if(index == 2 || index == 5 || index == 14 || index == 17 || index == 20 || index == 23) {
+                        @if(index == 2 || index == 5 || index == 8 || index == 14 ||
+                                index == 17 || index == 20 || index == 23) {
                             <br>
                         }
                     </span>
-
             }
         </div>
         <div class="playerOnTurn">
