--- a/app/views/mill.scala.html
+++ b/app/views/mill.scala.html
@@ -1,24 +1,37 @@
 
+@import de.htwg.se.NineMensMorris.model.FieldStatus
 @(controller:de.htwg.se.NineMensMorris.controller.controllerComponent.ControllerInterface)
 @board= @{ controller.gameboardToString.replaceAll("[\\r\\n]","<br>").replaceAll(" ","&nbsp;&nbsp;") }
 @currentPlayer= @{ controller.playerOnTurn }
 @size = @{ controller.getVertexList.size }
 @list = @{ controller.getVertexList }
+@fieldStatus(field: Int) = @{
+    controller.getField(field) match {
+        case Some(value) =>
+            if (value.fieldStatus == FieldStatus.White) "white"
+            else if(value.fieldStatus == FieldStatus.Black) "black"
+            else "empty"
+    }
+}
 
 @main("Nine Mens Morris") {
+    <link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/main.css")' />
+
+
     <h1>Welcome to Nine Mens Morris!</h1>
     <div class="gamecontainer">
         <div class="game">
             <!--@{ Html.apply(board) }-->
             <br>
             @for(index <- 0 until size) {
-                    <span class="field index@index">
-                        @list(index)
-                        @if(index == 2 || index == 5 || index == 8 || index == 14 ||
-                                index == 17 || index == 20 || index == 23) {
-                            <br>
-                        }
-                    </span>
+                <div class="@{"field " + fieldStatus(index)}">
+                    @list(index)
+                </div>
+                @if(index == 2 || index == 5 || index == 8 || index == 14 ||
+                        index == 17 || index == 20 || index == 23) {
+                    <div class="clear"></div>
+                }
+
             }
         </div>
         <div class="playerOnTurn">
