--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,6 @@
 .gamecontainer {
-    height: 100%;
-    width: 100%;
+    height: 650px;
+    width: 650px;
     margin: 1em;
     display:flex;
     font-size:40px;
@@ -13,7 +13,7 @@
     border-width: 0.05em;
     border-spacing: 0px;
     border-color: #00023d;
-    background-color: sandybrown;
+    background-color: #f4f3ec;
     padding: 0.05em;
     margin:auto;
     height: 40vw;
@@ -22,39 +22,21 @@
 }
 
 .field {
-    display: inline-block; /* switch to none if candidates should show*/
-    border-radius: 50%;
-    width: 1.2em;
-    height: 1.2em;
-    background-color: beige;
-}
-
-.row1 .field{
-
-}
-
-.row2 {
-
-}
-
-.row3 {
-
-}
-
-.row4 {
 
 }
 
 .white {
     background-color: white;
+    color: black;
 }
 
 .black {
     background-color: black;
+    color: white;
 }
 
 .empty {
-    background-color: beige;
+    #background-color: beige;
 }
 
 .clear {
