Mill-04: styled with bootstrap

--- a/app/views/mill.scala.html
+++ b/app/views/mill.scala.html
@@ -26,10 +26,11 @@
     <div class="jumbotron header-jumbotron d-flex flex-column justify-content-center align-items-center">
         <h1 class="display-4">Welcome to Nine Mens Morris!</h1>
         <h2 class="display-6"> @{ currentPlayer } </h2>
+        <a class="btn btn-primary" href="/start" role="button">Spiel starten</a>
     </div>
     <section class="game">
         <div class="container align-content-center">
-            <svg width="650" height="650" viewBox="0 0 650 650" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="svg" width="650" height="650" viewBox="0 0 650 650" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="650" height="650" fill="#EB5B38"/>
                 <rect x="30" y="30" width="292" height="292" fill="black"/>
                 <rect x="330" y="330" width="292" height="292" fill="black"/>
