--- a/app/views/rules.scala.html
+++ b/app/views/rules.scala.html
@@ -1,37 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/rules.css")' />
     <head>
         <meta charset="UTF-8">
         <title>Rules</title>
-
-        <h1>Rules</h1>
     </head>
     <body>
-        <p>There are 3 phases in the game.</p>
-            <ol type ="1">
-                <li>Place</li>
-                <li>Move</li>
-                <li>Fly</li>
-            </ol>
-        <h3>Place</h3>
-        <p>Before the game starts a coin has to be tossed to decide who will play white - white then moves first. <br>
-            White has to place a stone on a free point of its choice. Then black has to place a stone. This continues until all 18 stones have been placed. <br>
+        <div class="container">
+            <h1>Rules</h1>
+            <div class="box">
+                <p>There are 3 phases in the game.</p>
+                <ol type ="1">
+                    <li>Place</li>
+                    <li>Move</li>
+                    <li>Fly</li>
+                </ol>
+            </div>
 
-        </p>
-        <h3>Move</h3>
-        <p>Now the player can move a stone to a free adjacent point along the lines</p>
-        <h3>Fly</h3>
-        <p>When a player has only 3 stones left he can move a stone to any free point on the board</p>
 
-        <h3>Case of mill</h3>
-        <p>If 3 stones of one colour form a line the player can remove a stone of his opponent which isn't in a mill (If all the stones are in a mill this rule doesnt apply) <br>
-            The stones remain outside the board and cant be placed back on it
-        </p>
-        <h3>Game ending</h3>
-        <p>The game ends if one player has only 2 Stones left. The other player wins the game</p>
-        <p>Let's play a <a href="/start"> Game</a></p>
+            <h3>Place</h3>
+            <div class="box">
+                <p>Before the game starts a coin has to be tossed to decide who will play white - white then moves first. <br>
+                    White has to place a stone on a free point of its choice. Then black has to place a stone. This continues until all 18 stones have been placed. <br>
+                </p>
+            </div>
+            <h3>Move</h3>
+            <div class="box">
+                <p>Now the player can move a stone to a free adjacent point along the lines</p>
+            </div>
+            <h3>Fly</h3>
+            <div class="box">
+                <p>When a player has only 3 stones left he can move a stone to any free point on the board</p>
+            </div>
+            <h3>Case of mill</h3>
+            <div class="box">
+                <p>If 3 stones of one colour form a line the player can remove a stone of his opponent which isn't in a mill (If all the stones are in a mill this rule doesnt apply) <br>
+                    The stones remain outside the board and cant be placed back on it
+                </p>
+            </div>
+            <h3>Game ending</h3>
+            <p>The game ends if one player has only 2 Stones left. The other player wins the game</p>
+            <p>Let's play a <a href="/start"> Game</a></p>
+            <img id="img" src="@routes.Assets.versioned("images/Board.jpg")"/>
 
-        <img src="@routes.Assets.versioned("images/Board.png")"/>
+        </div>
 
 
     </body>
