--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -8,15 +8,25 @@
     font-weight: bold;
     color: black;
 }
+.jumbotron {
+    background-color: #EFECEF;
+}
+
+.btn-primary {
+    background-color: #e05435;
+    border: #e05435;
+}
 
 .svg {
     display: block;
     margin: auto;
 }
 
-
-.field {
-
+.page-header {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 100%;
+    display: block;
 }
 
 .white {
