added accordion & styles

--- a/app/views/mill.scala.html
+++ b/app/views/mill.scala.html
@@ -28,7 +28,7 @@
 
 
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="/">NineMensMorris</a>
+                <a class="navbar-brand" href="/">NineMensMorris by Anton &amp; Matthias</a>
                 <button id="toggle-mobile-nav" class="navbar-toggler" type="button" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -42,7 +42,7 @@
             <div class="jumbotron header-jumbotron d-flex flex-column justify-content-center align-items-center">
                 <h1 class="display-4">Welcome to Nine Mens Morris!</h1>
                 <h2 class="display-6"> @{ currentPlayer } </h2>
-                <a class="btn btn-primary" href="/start" role="button">Spiel starten</a>
+                <a class="btn btn-primary" href="/start" role="button">Start game</a>
             </div>
             <section class="game">
             <div class="align-content-center">
