--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -11,6 +11,8 @@
 }
 .jumbotron {
     background-color: #EFECEF;
+    border-radius: 10px;
+    border: 1px solid;
 }
 
 .btn-primary {
@@ -37,6 +39,11 @@
     background-repeat: no-repeat;
     background-position: 50% 100%;
     display: block;
+}
+
+
+.navbar-light .navbar-nav .nav-link:hover{
+    color: #5CBBB7;
 }
 
 .white {
