--- a/public/stylesheets/rules.css
+++ b/public/stylesheets/rules.css
@@ -2,7 +2,6 @@
     background-color: lightgrey;
     border: 2px solid;
     border-radius: 10px;
-
 }
 
 .container {
@@ -14,7 +13,15 @@
 .box {
     background-color: #efecef;
     padding: 1em;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    border-radius: 10px;
+    border: 1px solid
 
+}
+
+.navbar-light .navbar-nav .nav-link:hover{
+    color: #5CBBB7;
 }
 
 #img {
@@ -32,6 +39,7 @@
     margin-top: 5px;
     margin-bottom: 5px;
     border-radius: 10px;
+    border: 0.5px solid
 }
 
 a {
