--- a/app/views/mill.scala.html
+++ b/app/views/mill.scala.html
@@ -86,7 +86,15 @@
                 </svg>
             </div>
             </section>
+
         </div>
 
+
+
+
     </header>
+    <body>
+        @footer()
+    </body>
+
 }
