--- a/app/views/rules.scala.html
+++ b/app/views/rules.scala.html
@@ -4,12 +4,8 @@
     <html lang="en">
 
         <header class="page-header">
-            <head>
                 <meta charset="UTF-8">
                 <title>Rules</title>
-            </head>
-            <body>
-
                 <div class="container">
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <a class="navbar-brand" href="/">NineMensMorris by Anton &amp; Matthias</a>
@@ -107,9 +103,10 @@
                     <p>Let's play a <a href="/start"> Game</a></p>
                     <img id="img" src="@routes.Assets.versioned("images/Board.jpg")"/>
 
-                </div>
 
-            </body>
+                </div>
+            @footer()
         </header>
+
     </html>
 }
