--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,13 +1,13 @@
 .gamecontainer {
     height: 650px;
     width: 650px;
-    margin: 1em;
     display:flex;
     font-size:40px;
     font-family: "Verdana",Geneva, sans-serif;
     font-weight: bold;
     color: black;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 .jumbotron {
     background-color: #EFECEF;
@@ -39,6 +39,7 @@
     background-repeat: no-repeat;
     background-position: 50% 100%;
     display: block;
+    padding-bottom: 10px;
 }
 
 
