--- a/app/views/mill.scala.html
+++ b/app/views/mill.scala.html
@@ -24,21 +24,9 @@
     <link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/main.css")' />
     <script src='@routes.Assets.versioned("javascripts/bootstrap.min.js")'> </script>
     <header class="page-header">
+
         <div class="container">
-
-
-            <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="/">NineMensMorris by Anton &amp; Matthias</a>
-                <button id="toggle-mobile-nav" class="navbar-toggler" type="button" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" href="/rules">Rules</a>
-                    </div>
-                </div>
-            </nav>
+            @navbar()
             <div class="jumbotron header-jumbotron d-flex flex-column justify-content-center align-items-center">
                 <h1 class="display-4">Welcome to Nine Mens Morris!</h1>
                 <h2 class="display-6"> @{ currentPlayer } </h2>
@@ -88,9 +76,6 @@
             </section>
 
         </div>
-
-
-
 
     </header>
     <body>
