--- a/app/views/rules.scala.html
+++ b/app/views/rules.scala.html
@@ -6,20 +6,9 @@
         <header class="page-header">
                 <meta charset="UTF-8">
                 <title>Rules</title>
+
                 <div class="container">
-                    <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="/">NineMensMorris by Anton &amp; Matthias</a>
-                        <button id="toggle-mobile-nav" class="navbar-toggler" type="button" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                            <div class="navbar-nav">
-                                <a class="nav-item nav-link" href="/">Home <span class="sr-only">
-                                    (current)</span></a>
-                                <a class="nav-item nav-link active" href="/rules">Rules</a>
-                            </div>
-                        </div>
-                    </nav>
+                    @navbar()
                     <h1>Rules</h1>
 
                     <div class="box">
@@ -76,22 +65,6 @@
                             </div>
                         </div>
                     </div>
-
-
-                    <!-- <h3>Place</h3>
-                    <div class="box">
-                        <p>Before the game starts a coin has to be tossed to decide who will play white - white then moves first. <br>
-                            White has to place a stone on a free point of its choice. Then black has to place a stone. This continues until all 18 stones have been placed. <br>
-                        </p>
-                    </div>
-                    <h3>Move</h3>
-                    <div class="box">
-                        <p>Now the player can move a stone to a free adjacent point along the lines</p>
-                    </div>
-                    <h3>Fly</h3>
-                    <div class="box">
-                        <p>When a player has only 3 stones left he can move a stone to any free point on the board</p>
-                    </div> -->
                     <h3>Case of mill</h3>
                     <div class="box">
                         <p>If 3 stones of one colour form a line the player can remove a stone of his opponent which isn't in a mill (If all the stones are in a mill this rule doesnt apply) <br>
