added stones & changed svg structure

--- a/app/views/footer.scala.html
+++ b/app/views/footer.scala.html
@@ -1,5 +1,5 @@
 
-<link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/footer.css")' />
+<link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/main.css")' />
 <footer class="footer">
     <div class="container-fluid">
         <div class="row">
