--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -16,16 +16,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")" >
         <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/main.css")" >
-        <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" ></script>
-
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.versioned("javascripts/jquery-3.3.1.min.js")" type="text/javascript"></script>
+
+
     </head>
     <body>
         @* And here's where we render the `Html` object containing
          * the page content. *@
         @content
         @footer()
+        <script src="@routes.Assets.versioned("javascripts/jquery-3.3.1.min.js")"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" ></script>
+        <script src="@routes.Assets.versioned("javascripts/mill.js")"></script>
     </body>
 </html>
