--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/navbar.css")' />
+<link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/main.css")' />
 
 <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="/">NineMensMorris by Anton &amp; Matthias</a>
