--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,6 +5,7 @@
  * object to insert into the body of the page.
  *@
 @import views.html.helper.CSRF
+
 @(title: String)(content: Html)(implicit request: RequestHeader)
 
 <!DOCTYPE html>
@@ -19,6 +20,12 @@
 
         <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")" >
         <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/main.css")" >
+        <script type="module" src="assets/src/mill-app/mill-button.js"></script>
+        <script src="@routes.Assets.versioned("../../public/src/mill-app/mill-button.js")"></script>
+        <script src="@routes.Assets.versioned("src/mill-app/mill-button.js")"></script>
+
+
+
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
 
 
@@ -34,5 +41,6 @@
         <script src="@routes.Assets.versioned("javascripts/jquery-3.3.1.min.js")"></script>
         <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" ></script>
         <script src="@routes.Assets.versioned("javascripts/mill.js")"></script>
+
     </body>
 </html>
