--- a/app/views/mill.scala.html
+++ b/app/views/mill.scala.html
@@ -20,7 +20,7 @@
             <h1 class="display-4">Welcome to Nine Mens Morris!</h1>
             <h2 class="display-6" id="currentPlayer"> @currentPlayer </h2>
             <h2 class="display-6" id="foundMill"> false </h2>
-            <a class="btn btn-primary" href="/start" role="button">Start game</a>
+            <mill-button data="Start Game"></mill-button>
         </div>
         <section class="game">
             <div class="align-content-center">
