--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -21,15 +21,14 @@
         <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")" >
         <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/main.css")" >
         <script src="@routes.Assets.versioned("bower_components/webcomponentsjs/webcomponents-lite.js")"></script>
+        <script type="module" src="assets/src/mill-app/mill-box.js"></script>
         <script type="module" src="assets/src/mill-app/mill-button.js"></script>
+
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
 
     </head>
     <body>
         @helper.CSRF.formField
-        <mill-button>test</mill-button>
-
-
         @* And here's where we render the `Html` object containing
          * the page content. *@
         @content
@@ -37,7 +36,5 @@
         <script src="@routes.Assets.versioned("javascripts/jquery-3.3.1.min.js")"></script>
         <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" ></script>
         <script src="@routes.Assets.versioned("javascripts/mill.js")"></script>
-        <script src="@routes.Assets.versioned("javascripts/mill-button.js")"></script>
-
     </body>
 </html>
