--- a/app/views/rules.scala.html
+++ b/app/views/rules.scala.html
@@ -5,7 +5,8 @@
     <div class="container">
         @navbar()
         <h1>Rules</h1>
-        <mill-button-vue></mill-button-vue>
+        <div id="mill-app"></div>
+
 
         <div class="box">
             <p>There are 3 phases in the game.</p>
