--- a/app/views/rules.scala.html
+++ b/app/views/rules.scala.html
@@ -5,7 +5,9 @@
     <div class="container">
         @navbar()
         <h1>Rules</h1>
-        <div id="mill-app"></div>
+        <div id="mill-app">
+            <mill-app></mill-app>
+        </div>
 
 
         <div class="box">
