started with login

--- a/app/views/footer.scala.html
+++ b/app/views/footer.scala.html
@@ -1,17 +1,8 @@
 
-<link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/main.css")' />
-<footer class="footer">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-6 mt-md-0 mt-3">
-                <h5>About</h5>
-                <p>Developed by Anton Hummel &amp; Matthias Asche at the HTWG Konstanz for Web Technologies</p>
-            </div>
-            <hr class="clearfix w-100 d-md-none pb-3">
-            <div class="col-md-6 mb-md-0 mb-3">
-                <h5> Contact us</h5>
-                <p>You can contact us via our HTWG Email</p>
-            </div>
-        </div>
-    </div>
-</footer>
+<footer></footer>
+    <script>
+        import Footer from "../assets/components/MillFooter";
+        export default {
+            components: {Footer}
+        }
+    </script>
