--- a/app/views/mill.scala.html
+++ b/app/views/mill.scala.html
@@ -16,12 +16,19 @@
 @main("Nine Mens Morris") {
     <div class="container">
             @navbar()
-        <div class="jumbotron header-jumbotron d-flex flex-column justify-content-center align-items-center">
+        <status-panel v-if="$root.gameRunning === undefined"></status-panel>
+        <div v-else class="jumbotron header-jumbotron d-flex flex-column justify-content-center align-items-center">
             <h1 class="display-4">Welcome to Nine Mens Morris!</h1>
             <h2 class="display-6" id="currentPlayer"> @currentPlayer </h2>
             <h2 class="display-6" id="foundMill"> false </h2>
             <mill-button :url="'/start'" :text="'Start Game'"></mill-button>
         </div>
+
         <gameboard :gameboard="gameboard"></gameboard>
     </div>
-}
+}<script>
+    import StatusPanel from "../assets/components/StatusPanel";
+    export default {
+        components: {StatusPanel}
+    }
+</script>
