--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -12,3 +12,8 @@
             components: {MillLoginPage}
         }
 </script>
+    <style>
+        .navbar{
+            display: none;
+        }
+    </style>
