--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -33,6 +33,7 @@
         @* And here's where we render the `Html` object containing
          * the page content. *@
         <div id="mill-app">
+            <navbar></navbar>
         @content
         <mill-footer></mill-footer>
         </div>
