Mill-Vue_optimization: mergebug fix

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -36,7 +36,7 @@
          * the page content. *@
         <div id="mill-app">
             <navbar></navbar>
-        @content
+            @content
         <mill-footer></mill-footer>
         </div>
 
@@ -72,5 +72,11 @@
     import MillFooter from "../assets/components/MillFooter";
     export default {
         components: {MillFooter}
+    }
+</script>
+<script>
+    import Navbar from "../assets/components/Navbar";
+    export default {
+        components: {Navbar}
     }
 </script>
