--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,12 +1,12 @@
 @*
- * This template is called from the `main` template. This template
+ * This template is called from the `mainmill` template. This template
  * handles the rendering of the page header and body tags. It takes
  * two arguments, a `String` for the title of the page and an `Html`
  * object to insert into the body of the page.
  *@
 @import views.html.helper.CSRF
 
-@(title: String)(content: Html)(implicit request: RequestHeader)
+@(title: String)(content: Html)()
 
 <!DOCTYPE html>
 <html lang="en">
