--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -28,6 +28,8 @@
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
 
     </head>
+    <body>
+
 
         @* And here's where we render the `Html` object containing
         * the page content. *@
